# RAG_Framework

./: MANAGED_IDENTITY_GUIDE.md  README.md  SECURITY_GUIDE.md  autocomplete_demo.py  experiment_autocomplete_test.py  pyproject.toml  requirements.txt  test_azure_openai_model.py  test_azure_openai_services.py  test_blob_config.py  test_event_loop_fix.py  test_managed_identity_auth.py  test_managed_identity_implementation.py  test_metadata_extraction.py
.github/workflows/: publish-python.yml  python-publish.yml  workflow-dispatch.yml
examples/: blob_storage_prompts_example.py
rag_shared/core/fetchers/: __init__.py  base.py  blob_storage.py  postgres.py  registry.py  sql_server.py
rag_shared/core/fetchers/azure_search/: azure_search.py  noop.py
rag_shared/core/fetchers/rest_api/: api_process_a.py  api_process_b.py  (+1 more)
rag_shared/core/models/: azure_openai.py  base.py
rag_shared/core/orchestrators/: chat_orchestrator.py  rag_orchestrator.py
rag_shared/core/prompt_builders/: base.py  chat_prompt.py  composite.py  json_prompt.py  template.py
rag_shared/utils/: config.py  config_dataclasses.py  index_manager.py  retrieval.py  secure_config_api.py
resources/: __init__.py
resources/AI_search_indexes/: pdf_index.yml  text_index.yml  transcripts.yml
resources/configs/: blob_storage_example.yml  handbook_config.yml  recovered_config.yml  semantic_fields_example.yml  storage_example.yml
resources/prompts/: default_prompt_enhanced.j2
resources/prompts/recovered_space/: chat_prompt.j2  default_prompt.j2  system_prompt.j2
tests/: test_azure_connections.py
